--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
           </div>
           <div class="col-md-4 col-sm-6 col-xs-10">
-            <h2 class="text-center">Kaltaminor MFY, Sho'rguzar qishlog'i yo'lini asfalt qilishga ovoz berish</h2>
+            <h2 class="text-center">Qishloq yo'llarini asfalt qilishga ovoz berish</h2>
             <div class="card">
                 <div class="card-body">
                     <!-- <form> -->
